WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
135479
[MSE][Mac] Volume is not remembered between items in a YouTube playlist
https://bugs.webkit.org/show_bug.cgi?id=135479
Summary
[MSE][Mac] Volume is not remembered between items in a YouTube playlist
Jer Noble
Reported
2014-07-31 15:33:04 PDT
[MSE][Mac] Volume is not remembered between items in a YouTube playlist
Attachments
Patch
(1.83 KB, patch)
2014-07-31 15:35 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2014-07-31 15:33:58 PDT
<
rdar://problem/17876699
>
Jer Noble
Comment 2
2014-07-31 15:35:31 PDT
Created
attachment 235856
[details]
Patch
WebKit Commit Bot
Comment 3
2014-08-01 11:53:58 PDT
Comment on
attachment 235856
[details]
Patch Clearing flags on attachment: 235856 Committed
r171937
: <
http://trac.webkit.org/changeset/171937
>
WebKit Commit Bot
Comment 4
2014-08-01 11:54:00 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug