[MSE][Mac] Volume is not remembered between items in a YouTube playlist https://bugs.webkit.org/show_bug.cgi?id=135479

Reviewed by Eric Carlson.

When an AVSampleBufferAudioRenderer is added to the player, set its -volume and -muted
properties with the current values from the HTMLMediaElement.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.mm:
(WebCore::MediaPlayerPrivateMediaSourceAVFObjC::addAudioRenderer):


Canonical link: https://commits.webkit.org/153392@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@171937 268f45cc-cd09-0410-ab3c-d52691b4dbfc